# mlzoomcamp

./: .bashrc  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
01-intro/: Module1_homework.ipynb  linalg.ipynb
02-regression/: 02_regressionHomework.ipynb  car-price-prediction.ipynb
03-classification/: 03_classification.ipynb  03_classification_homework.ipynb  Untitled.ipynb
04-evaluation/: 04_Homework.ipynb  04_evaluation.ipynb
05-deployment/: 05_deployment.ipynb  05_deployment.py  05_predict_test.ipynb  05_predict_test.py  ping.py  predict.py  train.py
05-deployment/05_homework/: Dockerfile  main.py  marketing.py  predict_pipeline.py  pyproject.toml
05-deployment/05_workshop/: Dockerfile  main.py  marketing.py  ping.py  predict.py  pyproject.toml  train.py  workshop-uv-fastapi.ipynb
06-trees/: 06-trees.ipynb  06trees_homework.ipynb
08-deep-learning/: 08-deeplearning-homework.ipynb  mlzoomcamp-deeplearning-pytorch.ipynb  mlzoomcamp-deeplearning.ipynb  mlzoomcamp-deeplearning_tensorflowkeras.ipynb
10-kubernetes/: Dockerfile  app.py  pyproject.toml
10-kubernetes/10-homework/homework/: deployment.yaml  service.yaml
notebooks/: Introduction to Numpy.ipynb  Introduction to Pandas.ipynb
