[project]
name = "mlzoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "keras-image-helper>=0.0.2",
    "onnxruntime>=1.23.2",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "10-kubernetes",
]
